--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "ingest": "node index.js",
     "reset": "node reset.js"
   },
+  "engines": {
+    "node": ">=20"
+  },
   "dependencies": {
     "@adobe-commerce/aco-ts-sdk": "^1.0.0",
     "dotenv": "^16.5.0"
